[package]
name = "synergeia-node"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Asynchronous Runtime and Networking
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde_with = "3.8.1"

# Database
sled = "0.34"

# Cryptography and Blockchain Data Structures
primitive-types = "0.14.0"
bitcoin = { version = "0.31", features = ["serde"] }
bitcoin_hashes = "0.13"
secp256k1 = { version = "0.28", features = ["rand-std", "recovery", "global-context"] }
hex = "0.4"
bs58 = "0.5.0"
base64 = "0.22"

# Post-Quantum Cryptography (NIST ML-DSA / Dilithium)
# Using a pure-rust or high-level wrapper for Dilithium3
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Deterministic Arithmetic (Consensus Critical)
fixed = "1.27"
bigdecimal = { version = "0.4.3", features = ["serde"] } 
num-bigint = "0.4"
num-traits = { version = "0.2", features = ["std"] }

# Serialization and Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Synchronization and Utilities
parking_lot = "0.12"
lazy_static = "1.4.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Command Line Interface
clap = { version = "4.5", features = ["derive"] }

# Configuration Management
config = { version = "0.14", features = ["toml"] }